--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,6 +26,12 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+    - run: |
+      cd albion-react-ui
+      npm ci
+    - run: |
+      cd albion-react-ui
+      npm run build --if-present
+    - run: |
+      cd albion-react-ui
+      npm test
